--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
@@ -234,8 +233,9 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-photo.jpg") top center;
+  background: url("../img/hero.jpg") top center;
   background-size: cover;
+  background-position: center center;
 }
 
 #hero:before {
@@ -271,11 +271,20 @@ h6 {
 }
 
 #hero p span {
-  color: #fff;
+  font-weight: bold;
+  font-size: 50px;
   padding-bottom: 4px;
   letter-spacing: 1px;
   border-bottom: 3px solid #149ddd;
+  background-image: url("../img/flame.gif"); /* Specify the correct path to the image */
+  background-size: cover;
+  background-position: center;
+  background-clip: text;
+  -webkit-background-clip: text;
 }
+
+
+
 
 @media (min-width: 1024px) {
   #hero {
@@ -918,4 +927,19 @@ section {
     width: auto;
     padding-right: 20px 15px;
   }
+}
+
+.typed {
+  /* Set the background image */
+  background-image: url(flame.gif);
+  /* Ensure the background image covers the entire text */
+  background-size: cover;
+  /* Center the background image */
+  background-position: center;
+  /* Make the text transparent */
+  color: transparent;
+  /* Clip the background to the text */
+  background-clip: text;
+  /* For WebKit-based browsers like Chrome and Safari */
+  -webkit-background-clip: text;
 }
